monitoring/deploy/alertmanager/02-alertmanager-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: alertmanager
  labels:
    training-monitoring: 'true'
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    app: alertmanager
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
      - image: docker.io/prom/alertmanager
        imagePullPolicy: Always
        name: alertmanager
        ports:
        - containerPort: 9093
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/alertmanager/
          name: alermanager-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: alermanager-config
        name: alermanager-config
  test: false
  triggers:
  - type: ConfigChange
