monitoring/deploy/alertmanager/03-alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    training-monitoring: "true"
  name: alertmanager
spec:
  clusterIP: 172.30.98.31
  ports:
  - port: 9093
    protocol: TCP
    targetPort: 9093
  selector:
    app: alertmanager
  sessionAffinity: None
  type: ClusterIP
